--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL = "mongodb+srv://saurav:saurav@cluster0.cowzm.mongodb.net/?retryWrites=true&w=majority"
+DATABASE_URL = "mongodb+srv://saurav:saurav@cluster0.cowzm.mongodb.net/test?retryWrites=true&w=majority"
 SECRET_KEY = 'yedilmangemore'
